# synclib

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  run_djinni.sh
generated_src/cpp/: CompareResult.hpp  Directory.hpp  DirectoryTree.hpp  File.hpp  FileCompareResult.hpp  InputStream.hpp  OutputStream.hpp  Repository.hpp
generated_src/java/: CompareResult.java  Directory.java  DirectoryTree.java  File.java  FileCompareResult.java  InputStream.java  OutputStream.java  Repository.java
generated_src/jni/: NativeCompareResult.cpp  NativeCompareResult.hpp  NativeDirectory.cpp  NativeDirectory.hpp  NativeDirectoryTree.cpp  NativeDirectoryTree.hpp  NativeFile.cpp  NativeFile.hpp  NativeFileCompareResult.hpp  NativeInputStream.cpp  NativeInputStream.hpp  NativeOutputStream.cpp  NativeOutputStream.hpp  NativeRepository.cpp  NativeRepository.hpp
idl/: directory_tree.djinni  repository.djinni  stream.djinni  sync_lib.djinni
include/: BasicException.hpp  CppStreams.hpp  DirectoryImpl.hpp  FileSystemRepositoryImpl.hpp  FileSystemStreams.hpp
source/: DirectoryImpl.cpp  FileSystemRepositoryImpl.cpp  FileSystemStreams.cpp
source/directorytree/: DirectoryImpl.cpp  DirectoryTree.cpp
test/: CMakeLists.txt  main.cpp
test/testdata/repoA/: file1  file2
test/testdata/repoA/.hiddendir/: fileInHiddenDir
test/testdata/repoA/subfolder1/: file3
test/testdata/repoB/: file4
test/testdata/repoB/subfolder1/: file3
